{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 236,
  "lineage": "3ff0336b-aa68-f6e5-6cad-34beb3b903a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff8e4d62f7abf642",
            "arn": "arn:aws:ec2:us-east-1:320372421165:elastic-ip/eipalloc-0ff8e4d62f7abf642",
            "domain": "vpc",
            "id": "eipalloc-0ff8e4d62f7abf642",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-210-15-210.compute-1.amazonaws.com",
            "public_ip": "18.210.15.210",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "mydaily-nat-eip-a"
            },
            "tags_all": {
              "Name": "mydaily-nat-eip-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:internet-gateway/igw-03df6ffb1c35043fb",
            "id": "igw-03df6ffb1c35043fb",
            "owner_id": "320372421165",
            "region": "us-east-1",
            "tags": {
              "Name": "mydaily-igw"
            },
            "tags_all": {
              "Name": "mydaily-igw"
            },
            "vpc_id": "vpc-05e48e668dad5b35f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff8e4d62f7abf642",
            "association_id": "eipassoc-0d0d5819c654b4462",
            "connectivity_type": "public",
            "id": "nat-00fcd2b1e3859bfd2",
            "network_interface_id": "eni-0ca01ab004e54a47c",
            "private_ip": "10.0.1.173",
            "public_ip": "18.210.15.210",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03230f582c727caef",
            "tags": {
              "Name": "mydaily-nat-a"
            },
            "tags_all": {
              "Name": "mydaily-nat-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:route-table/rtb-0bb8f0a6b9be2721c",
            "id": "rtb-0bb8f0a6b9be2721c",
            "owner_id": "320372421165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00fcd2b1e3859bfd2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mydaily-private-rt-a"
            },
            "tags_all": {
              "Name": "mydaily-private-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e48e668dad5b35f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320372421165",
            "id": "rtb-0bb8f0a6b9be2721c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:route-table/rtb-0302e9e8748cdd1ce",
            "id": "rtb-0302e9e8748cdd1ce",
            "owner_id": "320372421165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03df6ffb1c35043fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mydaily-public-rt"
            },
            "tags_all": {
              "Name": "mydaily-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e48e668dad5b35f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320372421165",
            "id": "rtb-0302e9e8748cdd1ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041dd0e42601e03a4",
            "region": "us-east-1",
            "route_table_id": "rtb-0bb8f0a6b9be2721c",
            "subnet_id": "subnet-0b86e38d2546b100c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0622613fa6dd15be0",
            "region": "us-east-1",
            "route_table_id": "rtb-0bb8f0a6b9be2721c",
            "subnet_id": "subnet-0c892434a776dfeba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.private_a",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff15eed132a091d0",
            "region": "us-east-1",
            "route_table_id": "rtb-0302e9e8748cdd1ce",
            "subnet_id": "subnet-03230f582c727caef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6ea1dda80cac7d0",
            "region": "us-east-1",
            "route_table_id": "rtb-0302e9e8748cdd1ce",
            "subnet_id": "subnet-0c23060b598513e3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:security-group/sg-0addebbb30df4aefe",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0addebbb30df4aefe",
            "ingress": [],
            "name": "eks-cluster-sg-20251018182324096900000001",
            "name_prefix": "eks-cluster-sg-",
            "owner_id": "320372421165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mydaily-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "mydaily-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e48e668dad5b35f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320372421165",
            "id": "sg-0addebbb30df4aefe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:security-group/sg-01a1e7051b1d5a4f2",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a1e7051b1d5a4f2",
            "ingress": [],
            "name": "eks-node-sg-20251018182324097200000002",
            "name_prefix": "eks-node-sg-",
            "owner_id": "320372421165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mydaily-eks-nodes-sg",
              "kubernetes.io/cluster/mydaily-cluster": "owned"
            },
            "tags_all": {
              "Name": "mydaily-eks-nodes-sg",
              "kubernetes.io/cluster/mydaily-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e48e668dad5b35f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320372421165",
            "id": "sg-01a1e7051b1d5a4f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1025,
            "id": "sgrule-892428433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-01a1e7051b1d5a4f2",
            "security_group_rule_id": "sgr-0764fdd83a9bd71b3",
            "self": false,
            "source_security_group_id": "sg-0addebbb30df4aefe",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_node_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-3324539280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-01a1e7051b1d5a4f2",
            "security_group_rule_id": "sgr-05affd24ba23f2645",
            "self": false,
            "source_security_group_id": "sg-0addebbb30df4aefe",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-765316846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-01a1e7051b1d5a4f2",
            "security_group_rule_id": "sgr-0087c55449629be5d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-436371130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-01a1e7051b1d5a4f2",
            "security_group_rule_id": "sgr-0cad3630dcdc212a2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2584301758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0addebbb30df4aefe",
            "security_group_rule_id": "sgr-01593466e6c447c50",
            "self": false,
            "source_security_group_id": "sg-01a1e7051b1d5a4f2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-68685597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-01a1e7051b1d5a4f2",
            "security_group_rule_id": "sgr-06f8383bfdf594e2c",
            "self": false,
            "source_security_group_id": "sg-01a1e7051b1d5a4f2",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:subnet/subnet-0b86e38d2546b100c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b86e38d2546b100c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320372421165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mydaily-private-a",
              "kubernetes.io/cluster/mydaily-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mydaily-private-a",
              "kubernetes.io/cluster/mydaily-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05e48e668dad5b35f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320372421165",
            "id": "subnet-0b86e38d2546b100c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:subnet/subnet-0c892434a776dfeba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c892434a776dfeba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320372421165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mydaily-private-b",
              "kubernetes.io/cluster/mydaily-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mydaily-private-b",
              "kubernetes.io/cluster/mydaily-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05e48e668dad5b35f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320372421165",
            "id": "subnet-0c892434a776dfeba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:subnet/subnet-03230f582c727caef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03230f582c727caef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320372421165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mydaily-public-a",
              "kubernetes.io/cluster/mydaily-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mydaily-public-a",
              "kubernetes.io/cluster/mydaily-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05e48e668dad5b35f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320372421165",
            "id": "subnet-03230f582c727caef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:subnet/subnet-0c23060b598513e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c23060b598513e3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320372421165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mydaily-public-b",
              "kubernetes.io/cluster/mydaily-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mydaily-public-b",
              "kubernetes.io/cluster/mydaily-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05e48e668dad5b35f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320372421165",
            "id": "subnet-0c23060b598513e3b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320372421165:vpc/vpc-05e48e668dad5b35f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08af0ea0e48905b88",
            "default_route_table_id": "rtb-07f82e7ca5824eebd",
            "default_security_group_id": "sg-0bafd1ef18f0e4c57",
            "dhcp_options_id": "dopt-0447a3a933473fcdd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e48e668dad5b35f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f82e7ca5824eebd",
            "owner_id": "320372421165",
            "region": "us-east-1",
            "tags": {
              "Name": "mydaily-vpc",
              "kubernetes.io/cluster/mydaily-cluster": "shared"
            },
            "tags_all": {
              "Name": "mydaily-vpc",
              "kubernetes.io/cluster/mydaily-cluster": "shared"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320372421165",
            "id": "vpc-05e48e668dad5b35f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}